--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ header {
     position: sticky;
     width: 100vw;
     height: 100px;
-    background-color: transparent;
+    background-color: rgba(0,0,0, 0.4);
     filter: blur(5px);
 }
 
